# prince

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/actions/install/: action.yaml
.github/actions/install-env/: action.yaml
.github/workflows/: code-quality.yml  hugo.yaml  hugo.yml  pytest.yaml  ruff.yaml  unit-tests.yml
prince/: __init__.py  ca.py  datasets.py  famd.py  gpa.py  mca.py  mfa.py  pca.py  plot.py  svd.py  utils.py
tests/: __init__.py  test_ca.py  test_famd.py  test_gpa.py  test_mca.py  test_mfa.py  test_pca.py
