[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "prince"
version = "0.12.0"
description = "Factor analysis in Python: PCA, CA, MCA, MFA, FAMD, GPA"
authors = ["Max Halford <maxhalford25@gmail.com>"]
license = { text = "MIT" }
requires-python = "^3.11"
dependencies = [
    "scikit-learn>=1.3.0",
    "altair>=5.0.0",
    "polars>=0.18.0",
]
dev-dependencies = [
    "nbconvert>=7.2.9",
    "fbpca>=1.0",
    "pytest>=7.1.1",
    "ipykernel>=6.13.0",
    "rpy2>=3.5.2",
    "ruff>=0.0.270",
    "pre-commit>=3.3.2",
]

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 100
target-version = 'py310'
ignore = ["E501"]

[tool.ruff.isort]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
    "--doctest-glob=*.md"
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"
