[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prince"
version = "0.12.0"
description = "Factor analysis in Python: PCA, CA, MCA, MFA, FAMD, GPA"
authors = [
    { name = "Max Halford", email = "maxhalford25@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jax[cpu]",
    "scikit-learn>=1.3.0",
    "altair>=5.0.0",
    "polars>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "nbconvert>=7.7.4",
    "fbpca>=1.0",
    "pytest>=7.3.1",
    "ipykernel>=6.25.1",
    "rpy2>=3.5.13",
    "ruff>=0.0.285",
    "pre-commit>=3.3.3",
]

[tool.setuptools.packages.find]
include = ["prince"]

[tool.ruff]
select = ["E", "F", "I", "UP"]  # https://beta.ruff.rs/docs/rules/
line-length = 100
target-version = 'py310'
ignore = ["E501"]

[tool.ruff.isort]

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
    "--doctest-glob=*.md"
]
doctest_optionflags = "NORMALIZE_WHITESPACE NUMBER ELLIPSIS"
